[gd_scene load_steps=6 format=3 uid="uid://d6qbqejc6fs8"]

[ext_resource type="Script" path="res://selector de mazo.gd" id="1_k6jw1"]
[ext_resource type="Texture2D" uid="uid://dx1l3e1737us1" path="res://Assets/Imagenes/FLECHA2.png" id="2_in5ep"]
[ext_resource type="Theme" uid="uid://u1r3qsyvbvcj" path="res://new_theme.tres" id="3_71a7p"]
[ext_resource type="Texture2D" uid="uid://dtuo27x2kwtpw" path="res://Assets/Imagenes/FLECHA.png" id="4_5rqim"]
[ext_resource type="PackedScene" uid="uid://b58p6mmcmvaej" path="res://Scenes/card.tscn" id="4_aewjc"]

[node name="selector de mazo" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_k6jw1")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -734.0
offset_top = -98.0
offset_right = 734.0
offset_bottom = 98.0
grow_horizontal = 2
grow_vertical = 2

[node name="Cambiar-iz" type="Button" parent="HBoxContainer"]
layout_mode = 2
icon = ExtResource("2_in5ep")
flat = true
icon_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_direction = 2
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/CenterContainer"]
layout_mode = 2
alignment = 1

[node name="NombreMazo" type="Label" parent="HBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_71a7p")
theme_override_font_sizes/font_size = 50
text = "asdasf"

[node name="espacio" type="Label" parent="HBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_71a7p")
theme_override_font_sizes/font_size = 50

[node name="CartaRepresenta" type="CenterContainer" parent="HBoxContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 300)
layout_mode = 2

[node name="Card" parent="HBoxContainer/CenterContainer/VBoxContainer/CartaRepresenta" instance=ExtResource("4_aewjc")]
position = Vector2(69, 76)

[node name="Cambiar-der" type="Button" parent="HBoxContainer"]
layout_mode = 2
icon = ExtResource("4_5rqim")
flat = true
icon_alignment = 1

[connection signal="pressed" from="HBoxContainer/Cambiar-iz" to="." method="_on_cambiariz_pressed"]
[connection signal="pressed" from="HBoxContainer/Cambiar-der" to="." method="_on_cambiarder_pressed"]
